--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun 
 user_title: Software Developer
 email: anon@anon.com
 twitter_username: viniciotricolor
-github_username:  lorem_ipsum
+github_username:  viniciotricolor
 gplus_username:  lorem_ipsum
 
 # Google-analytics
