--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,13 @@ description: A blog about lorem ipsum dolor sit amet
 # url: "https://viniciotricolor.github.io" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: vinicio henrique
+username: Vinicio Henrique
 user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
 user_title: Software Developer
-email: anon@anon.com
+email: viniciotricolor@pm.me
 twitter_username: viniciotricolor
 github_username:  viniciotricolor
-gplus_username:  lorem_ipsum
+gplus_username:  viniciotricolor
 
 # Google-analytics
 google-analytics:
