--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Personal blog Vinicio Henrique
 
 # User settings
 username: Vinicio Henrique
-user_description: oi
+user_description: olá
 user_title: Software Developer
 email: viniciotricolor@pm.me
 twitter_username: viniciotricolor
